--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
   # end-of-file-fixer: Makes sure files end in a newline and only a newline
   # trailing-whitespace: Trims trailing whitespace
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.5.0
     hooks:
       - id: check-merge-conflict
 #      - id: check-yaml
@@ -18,7 +18,7 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/PyCQA/isort
-    rev: 5.10.1
+    rev: 5.13.2
     hooks:
       - id: isort
 
@@ -43,20 +43,16 @@ repos:
   # Ned Batchelder's McCabe script: 静态分析Python代码复杂度的工具
   # # flake8: noqa or # noqa: E234 -> pass
   - repo: https://github.com/pycqa/flake8
-    rev: 6.0.0
+    rev: 7.0.0
     hooks:
       - id: flake8
-        additional_dependencies:
-          - flake8-bugbear
-          - flake8-logging-format
-          - flake8-pytest-style
         args:
           - --max-line-length=120
-          - --ignore=B028,G201,G004,W503
+          - --ignore=B028,G201,G004,W503,E701
 
   # Bandit is a tool designed to find comsmon security issues in Python code.
   - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.4
+    rev: 1.7.8
     hooks:
       - id: bandit
         language_version: python3
@@ -64,27 +60,6 @@ repos:
 
   # gitlint: checks your commit messages for style
   - repo: https://github.com/jorisroovers/gitlint
-    rev: v0.15.1
+    rev: v0.19.1
     hooks:
       - id: gitlint
-
-#  - repo: https://github.com/jazzband/pip-tools
-#    rev: 6.9.0
-#    hooks:
-#      - id: pip-compile
-#        name: Generate requirements.txt
-#        files: ^(deploy\/requirements.in)$
-#        args:
-#          - --output-file
-#          - deploy/requirements.txt
-#          - --cache-dir
-#          - .cache/pip-tools
-#          - deploy/requirements.in
-
-#  - repo: https://github.com/codespell-project/codespell
-#    rev: v2.1.0
-#    hooks:
-#      - id: codespell
-#        name: codespell
-#        entry: codespell -q 3 -S "*.lock" -I codespell-ignore-words.txt --regex="[a-zA-Z0-9\-'’`]+"
-#        types: [text]
