1. fix user_id check 2. 个人文库创建收藏夹 3. 收藏夹列表调整 4. 收藏夹文献列表调整 5. 收藏夹问答、删除前校验 6. 个人文库添加收藏夹、问答前校验 7. add pip django-celery-beat 添加异步任务 8. 添加登录 9. 添加个人库调整

--- a/core/deploy/requirements.in
+++ b/core/deploy/requirements.in
@@ -16,6 +16,11 @@ s3transfer==0.10.0
 
 celery
 django-celery-results
+django-celery-beat
+
 redis
 django-request-id
 django-cors-headers
+
+# authing
+authing==4.5.18
