--- a/core/deploy/requirements.txt
+++ b/core/deploy/requirements.txt
@@ -15,6 +15,8 @@ asgiref==3.7.2
     #   django-cors-headers
 async-timeout==4.0.3
     # via redis
+authing==4.5.18
+    # via -r core/deploy/requirements.in
 billiard==4.2.0
     # via celery
 boto3==1.34.58
@@ -29,6 +31,7 @@ build==1.1.1
 celery==5.3.6
     # via
     #   -r core/deploy/requirements.in
+    #   django-celery-beat
     #   django-celery-results
 certifi==2024.2.2
     # via requests
@@ -49,16 +52,22 @@ click-plugins==1.1.1
     # via celery
 click-repl==0.3.0
     # via celery
+cron-descriptor==1.4.3
+    # via django-celery-beat
 distlib==0.3.8
     # via virtualenv
 django==5.0.3
     # via
     #   -r core/deploy/requirements.in
+    #   django-celery-beat
     #   django-celery-results
     #   django-cors-headers
     #   django-redis
     #   django-request-id
+    #   django-timezone-field
     #   djangorestframework
+django-celery-beat==2.6.0
+    # via -r core/deploy/requirements.in
 django-celery-results==2.5.1
     # via -r core/deploy/requirements.in
 django-cors-headers==4.3.1
@@ -67,10 +76,18 @@ django-redis==5.4.0
     # via -r core/deploy/requirements.in
 django-request-id==1.0.0
     # via -r core/deploy/requirements.in
+django-timezone-field==6.1.0
+    # via django-celery-beat
 djangorestframework==3.14.0
     # via -r core/deploy/requirements.in
 filelock==3.13.1
     # via virtualenv
+gql==2.0.0
+    # via authing
+graphql-core==2.3.2
+    # via
+    #   authing
+    #   gql
 identify==2.5.35
     # via pre-commit
 idna==3.6
@@ -91,18 +108,28 @@ platformdirs==4.2.0
     # via virtualenv
 pre-commit==3.6.2
     # via -r core/deploy/requirements.in
+promise==2.3
+    # via
+    #   gql
+    #   graphql-core
 prompt-toolkit==3.0.43
     # via click-repl
 psycopg2-binary==2.9.9
     # via -r core/deploy/requirements.in
+pyasn1==0.6.0
+    # via rsa
 pyproject-hooks==1.0.0
     # via
     #   build
     #   pip-tools
+python-crontab==3.0.0
+    # via django-celery-beat
 python-dateutil==2.9.0.post0
     # via
+    #   authing
     #   botocore
     #   celery
+    #   python-crontab
 pytz==2024.1
     # via djangorestframework
 pyyaml==6.0.1
@@ -112,17 +139,30 @@ redis==5.0.2
     #   -r core/deploy/requirements.in
     #   django-redis
 requests==2.31.0
-    # via -r core/deploy/requirements.in
+    # via
+    #   -r core/deploy/requirements.in
+    #   authing
+    #   gql
+rsa==4.0
+    # via authing
+rx==1.6.3
+    # via graphql-core
 s3transfer==0.10.0
     # via
     #   -r core/deploy/requirements.in
     #   boto3
 six==1.16.0
-    # via python-dateutil
+    # via
+    #   gql
+    #   graphql-core
+    #   promise
+    #   python-dateutil
 sqlparse==0.4.4
     # via django
 tzdata==2024.1
-    # via celery
+    # via
+    #   celery
+    #   django-celery-beat
 urllib3==2.0.7
     # via
     #   botocore
