--- a/core/deploy/requirements.txt
+++ b/core/deploy/requirements.txt
@@ -62,8 +62,8 @@ django==5.0.3
     #   django-celery-beat
     #   django-celery-results
     #   django-cors-headers
+    #   django-log-request-id
     #   django-redis
-    #   django-request-id
     #   django-timezone-field
     #   djangorestframework
 django-celery-beat==2.6.0
@@ -72,9 +72,9 @@ django-celery-results==2.5.1
     # via -r core/deploy/requirements.in
 django-cors-headers==4.3.1
     # via -r core/deploy/requirements.in
-django-redis==5.4.0
+django-log-request-id==2.1.0
     # via -r core/deploy/requirements.in
-django-request-id==1.0.0
+django-redis==5.4.0
     # via -r core/deploy/requirements.in
 django-timezone-field==6.1.0
     # via django-celery-beat
