--- a/core/deploy/requirements.txt
+++ b/core/deploy/requirements.txt
@@ -15,6 +15,10 @@ asgiref==3.7.2
     #   django-cors-headers
 async-timeout==4.0.3
     # via redis
+attrs==23.2.0
+    # via
+    #   jsonschema
+    #   referencing
 authing==4.5.18
     # via -r core/deploy/requirements.in
 billiard==4.2.0
@@ -66,6 +70,7 @@ django==5.0.3
     #   django-redis
     #   django-timezone-field
     #   djangorestframework
+    #   drf-spectacular
 django-celery-beat==2.6.0
     # via -r core/deploy/requirements.in
 django-celery-results==2.5.1
@@ -79,6 +84,10 @@ django-redis==5.4.0
 django-timezone-field==6.1.0
     # via django-celery-beat
 djangorestframework==3.14.0
+    # via
+    #   -r core/deploy/requirements.in
+    #   drf-spectacular
+drf-spectacular==0.27.2
     # via -r core/deploy/requirements.in
 filelock==3.13.1
     # via virtualenv
@@ -92,10 +101,16 @@ identify==2.5.35
     # via pre-commit
 idna==3.6
     # via requests
+inflection==0.5.1
+    # via drf-spectacular
 jmespath==1.0.1
     # via
     #   boto3
     #   botocore
+jsonschema==4.22.0
+    # via drf-spectacular
+jsonschema-specifications==2023.12.1
+    # via jsonschema
 kombu==5.3.5
     # via celery
 nodeenv==1.8.0
@@ -133,16 +148,26 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
     # via djangorestframework
 pyyaml==6.0.1
-    # via pre-commit
+    # via
+    #   drf-spectacular
+    #   pre-commit
 redis==5.0.2
     # via
     #   -r core/deploy/requirements.in
     #   django-redis
+referencing==0.35.1
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
 requests==2.31.0
     # via
     #   -r core/deploy/requirements.in
     #   authing
     #   gql
+rpds-py==0.18.1
+    # via
+    #   jsonschema
+    #   referencing
 rsa==4.0
     # via authing
 rx==1.6.3
@@ -163,6 +188,8 @@ tzdata==2024.1
     # via
     #   celery
     #   django-celery-beat
+uritemplate==4.1.1
+    # via drf-spectacular
 urllib3==2.0.7
     # via
     #   botocore
