--- a/core/deploy/requirements.txt
+++ b/core/deploy/requirements.txt
@@ -43,6 +43,8 @@ cfgv==3.4.0
     # via pre-commit
 charset-normalizer==3.3.2
     # via requests
+citeproc-py==0.6.0
+    # via -r core/deploy/requirements.in
 click==8.1.7
     # via
     #   celery
@@ -113,6 +115,10 @@ jsonschema-specifications==2023.12.1
     # via jsonschema
 kombu==5.3.5
     # via celery
+latexcodec==3.0.0
+    # via pybtex
+lxml==5.2.2
+    # via citeproc-py
 nodeenv==1.8.0
     # via pre-commit
 packaging==23.2
@@ -133,6 +139,8 @@ psycopg2-binary==2.9.9
     # via -r core/deploy/requirements.in
 pyasn1==0.6.0
     # via rsa
+pybtex==0.24.0
+    # via -r core/deploy/requirements.in
 pyproject-hooks==1.0.0
     # via
     #   build
@@ -151,6 +159,7 @@ pyyaml==6.0.1
     # via
     #   drf-spectacular
     #   pre-commit
+    #   pybtex
 redis==5.0.2
     # via
     #   -r core/deploy/requirements.in
@@ -181,6 +190,7 @@ six==1.16.0
     #   gql
     #   graphql-core
     #   promise
+    #   pybtex
     #   python-dateutil
 sqlparse==0.4.4
     # via django
