--- a/core/deploy/requirements.txt
+++ b/core/deploy/requirements.txt
@@ -39,6 +39,8 @@ celery==5.3.6
     #   django-celery-results
 certifi==2024.2.2
     # via requests
+cffi==1.16.0
+    # via cryptography
 cfgv==3.4.0
     # via pre-commit
 charset-normalizer==3.3.2
@@ -60,6 +62,8 @@ click-repl==0.3.0
     # via celery
 cron-descriptor==1.4.3
     # via django-celery-beat
+cryptography==42.0.8
+    # via wechatpayv3
 distlib==0.3.8
     # via virtualenv
 django==5.0.3
@@ -141,6 +145,10 @@ pyasn1==0.6.0
     # via rsa
 pybtex==0.24.0
     # via -r core/deploy/requirements.in
+pycparser==2.22
+    # via cffi
+pypng==0.20220715.0
+    # via qrcode
 pyproject-hooks==1.0.0
     # via
     #   build
@@ -160,6 +168,8 @@ pyyaml==6.0.1
     #   drf-spectacular
     #   pre-commit
     #   pybtex
+qrcode==7.4.2
+    # via -r core/deploy/requirements.in
 redis==5.0.2
     # via
     #   -r core/deploy/requirements.in
@@ -173,6 +183,7 @@ requests==2.31.0
     #   -r core/deploy/requirements.in
     #   authing
     #   gql
+    #   wechatpayv3
 rpds-py==0.18.1
     # via
     #   jsonschema
@@ -194,6 +205,8 @@ six==1.16.0
     #   python-dateutil
 sqlparse==0.4.4
     # via django
+typing-extensions==4.12.2
+    # via qrcode
 tzdata==2024.1
     # via
     #   celery
@@ -213,6 +226,8 @@ virtualenv==20.25.1
     # via pre-commit
 wcwidth==0.2.13
     # via prompt-toolkit
+wechatpayv3==1.2.52
+    # via -r core/deploy/requirements.in
 wheel==0.42.0
     # via pip-tools
 
